# taskman-int

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  backend_stream.py  main.cpp
backend/: app.py
client/electron-app/: main.js  package.json  preload.js
client/electron-app/renderer/: index.html  renderer.js
docs/: architecture.md  cpp_architecture.md
src/: app_messages.h  audio_capture.cpp  audio_capture.h  audio_playback.cpp  audio_playback.h  config.h  gemini_live_client.cpp  gemini_live_client.h  http_client.cpp  http_client.h  logger.h  main.cpp  prompt_client.cpp  prompt_client.h  stt_ws_client.cpp  stt_ws_client.h  stt_ws_socket.cpp  stt_ws_socket.h  test_stt_cli.cpp
